14:00 - 15:30 / 16:30 - 20:30 - Correct browser default link colors - Add Course titles as per slack list - Correct color/casing of course listings •	Substack - should not be an external link, links to /blog •	EMDR Training should be at end (after About) •	For now take out free resources •	Double line on top of mobile view - remove •	Desktop and mobile: course categories and subcategories should be uppercase and green •	Update footer to match header nav (+ fix to existingbottom aligned css bug) ------ WIP - currently stashed: •	Desktop - click on arrow to close menu -

--- a/src/styles/components/header-navigation/menu.scss
+++ b/src/styles/components/header-navigation/menu.scss
@@ -55,6 +55,9 @@
           color: var(--brand-primary);
           font-size: 1rem;
         }
+        &:first-of-type a {
+          border-top-width: 0;
+        }
       }
     }
     .menu-open & {
@@ -83,7 +86,7 @@ nav {
     box-sizing: border-box;
     width: 100%;
     padding-left: 0;
-    padding-right: 20px;
+    padding-right: 0;
   }
   @media (min-width: 1200px) {
     margin-left: auto;
@@ -495,12 +498,14 @@ li:hover + .mega-box,
   font-size: 16px;
   font-weight: 400;
   display: block;
-  height: 40px;
+  text-align: left;
+  margin-bottom: 16px;
   @media (max-width: 1200px) {
+    margin-bottom: 0;
+    height: 40px;
     padding: 0;
     padding-left: 8px;
     border: 0;
-    color: #000000;
   }
 }
 .row .mega-links li a:hover {
