--- a/src/styles/components/webinar-card.scss
+++ b/src/styles/components/webinar-card.scss
@@ -31,6 +31,9 @@
     margin: 0;
     display: flex;
     flex-direction: column;
+    @media (max-width: 1200px) {
+      width: calc(100% - 16px);
+    }
     li {
       background-color: #d3e4e0;
       border-radius: 6px;
