--- a/src/styles/layouts/footer.scss
+++ b/src/styles/layouts/footer.scss
@@ -53,6 +53,7 @@ footer {
       &.footer-menu-B {
         text-align: left;
         margin-left: 16px;
+        vertical-align: top;
       }
       &.footer-menu-A {
         text-align: right;
