--- a/src/styles/layouts/header.scss
+++ b/src/styles/layouts/header.scss
@@ -22,8 +22,19 @@ header {
       height: 36px;
     }
   }
-  a {
+  a,
+  a:visited,
+  a:hover,
+  a:active {
     text-decoration: none;
+    color: var(--brand-primary);
+  }
+
+  > a {
+    @media (min-width: 1200px) {
+      min-height: 50px;
+      display: inline-block;
+    }
   }
 
   .promotion-badge {
